@@ -7,7 +7,10 @@
 The format is based on [[https://keepachangelog.com/en/1.0.0/][Keep a Changelog]].
 
 ** [[https://github.com/ohyecloudy/slab/compare/v1.0.2...HEAD][Unrelease]]
-*** fixed
+*** Added
+    - =--date= 옵션에 오늘을 기준으로 한 delta days 입력이 가능하다. =--date -1= 옵션은 어제와 같다.
+      - commits-without-mr, self-merge 명령어에 적용
+*** Fixed
     - 파이프라인이 연속으로 100번 이상 실패해도 상태를 제대로 가져올 수 있다
 ** [[https://github.com/ohyecloudy/slab/compare/v1.0.1...v1.0.2][v1.0.2]]
 *** Added
